[project]
name = "campus-lost-found-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.6",
    "pydentic>=0.0.1.dev3",
    "python-dotenv>=1.2.2",
]
